fixtures/cascading/invalid/01-nested-path-escape/packages/sdk/.anatomy
anatomy_version = "0.2"
tagline = "sub-anatomy with deliberate path escape"

[identity]
fingerprint = "jtambp6hxrfyp3j22zb8"

[identity.stack]
id = "typescript"
hash = "jtamb"

[identity.form]
id = "typescript-library"
hash = "p6hxr"

[identity.domain]
id = "developer-tools"
hash = "fyp3j"

[identity.function]
id = "demo-sdk"
hash = "22zb8"

[generated]
at = 2026-05-06T12:00:00.000Z
by = "test"
model = "none"
schema = "https://anatomy.dev/spec/0.2/schema.json"

[[structure.entries]]
path = "../../escape"
purpose = "deliberate escape"
kind = "source"
